<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:screenOrientation="portrait">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/profile"
       android:title="@string/home"
        android:icon="@drawable/ic_person_black"/>

    <item android:id="@+id/add"
        android:title="@string/app_name"
        android:icon="@drawable/ic_stars_black"/>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black"/>

    <item
        android:id="@+id/internet"
        android:title="@string/password"
        android:icon="@drawable/ic_person_black"/>

        <item
            android:id="@+id/logout"
            android:title="@string/otro"
            android:icon="@drawable/ic_back_black"/>
    </group>


    <item android:title="@string/app_name">

        <menu>
    <item
        android:id="@+id/setting"
        android:title="@string/Saltar"
        android:icon="@drawable/ic_search_black"/>

    <item
    android:id="@+id/us"
    android:title="@string/search"
    android:icon="@drawable/ic_home_black"/>

     <item
     android:id="@+id/app_exit"
     android:title="@string/center"
     android:icon="@drawable/ic_search_black"/>

        </menu>

    </item>


</menu>