<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register1">


    <EditText
        android:id="@+id/editText_numer"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/numer"
        android:inputType="number"
        android:digits="1234567890"
        android:maxLength="15"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <EditText
        android:id="@+id/textView_name"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:singleLine="true"
        android:hint="@string/name"
        android:maxLength="15"
        android:digits="abcdefghijklmnñoprstuvvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYáéíóúÁÉÍÓÚ"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/textView_surname"
        android:layout_width="176dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:gravity="center"
        android:digits="abcdefghijklmnñoprstuvvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYáéíóúÁÉÍÓÚ"
        android:hint="@string/surnae"
        android:maxLength="16"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        android:background="@drawable/button_rounded_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/ET_Date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/fechaNacimiento"
        android:inputType="date"
        android:max="1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="Correo"
        android:singleLine="true"
        android:maxLength="30"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_Date" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="83dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextpassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:maxLength="15"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_numer" />

    <EditText
        android:id="@+id/editText_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Repassword"
        android:inputType="textPassword"
        android:maxLength="15"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextpassword1" />


</androidx.constraintlayout.widget.ConstraintLayout>
