<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPhone">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="62dp"
        android:gravity="center"
        android:text="@string/codephone"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="9dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="215dp"
        android:layout_height="54dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="101dp"
        android:backgroundTint="@color/red"
        android:ems="10"
        android:digits="1234657890"
        android:gravity="center"
        android:hint="@string/code"

        android:maxLength="15"
        android:textColor="@color/red"

        android:textColorHint="@color/red"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_Rephone"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="99dp"
        android:background="@drawable/button_rounded_border_red"
        android:text="Button"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="221dp"
        android:layout_height="35dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:gravity="center"
        android:text="@string/dontRecivido"
        android:textColor="@color/red"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Rephone" />
</androidx.constraintlayout.widget.ConstraintLayout>