<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUp.Password">

    <EditText

        android:id="@+id/id_Et_pass12"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginStart="56dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/black"
        android:drawableTint="#00F00404"
        android:ems="10"
        android:filterTouchesWhenObscured="false"
        android:foregroundTint="#00EE0909"
        android:hint="@string/Repassword"
        android:inputType="textPassword"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="#00F80F0F"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_Et_pass11"
        tools:targetApi="o" />

    <Button
        android:id="@+id/id_button_next3"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_Et_pass12" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="144dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/id_Et_pass11"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginStart="56dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/black"
        android:drawableTint="#00F00404"
        android:ems="10"
        android:filterTouchesWhenObscured="false"
        android:foregroundTint="#00EE0909"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:outlineSpotShadowColor="@color/black"
        android:shadowColor="#00F80F0F"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/id_Iv_Back1"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:text="Registrate (1/2)"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/id_Tv_home1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_Tv_home1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:text="@string/SingIn"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>