<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUp.Phone">

    <Button
        android:id="@+id/id_button_rePhone"
        android:layout_width="317dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_rounded_border"
        android:clickable="true"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_phone_register" />

    <EditText
        android:id="@+id/id_phone_register"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="40dp"
        android:digits="1234567890"
        android:gravity="center"
        android:hint="@string/numer"
        android:inputType="number"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_spinner_countries"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Spinner
        android:id="@+id/id_spinner_countries"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/id_phone_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="305dp"
        android:layout_height="214dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="116dp"
        android:layout_height="37dp"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="165dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/id_close_1R"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_equis_black" />
</androidx.constraintlayout.widget.ConstraintLayout>